--- a/aboutus.html
+++ b/aboutus.html
@@ -57,6 +57,11 @@
 
     <div class="wrapper">
         <h1><span>Our</span> Team</h1>
+         <p>
+            80% of users will not engage with your product again if it does not display properly on mobile; 
+            the expectation is that mobile must be a more immersive, personal and thought-through experience; this requires a particular set of
+            skills in design-led thinking, strategic consideration and product performance optimisation. We’ve got this. :)
+        </p>
         <div class="team">
         <div class="team_member">
             <div class="team_image">
