--- a/aboutus.html
+++ b/aboutus.html
@@ -58,6 +58,9 @@
     <div class="wrapper">
         <h1><span>Our</span> Team</h1>
          <p>
+            In the digital age, we are marketing ourselves on the web- whether we like it or not.  That is why we aim to make it as easy and affordable for businesses to take charge of their web presence. 
+            Words like tweet and yelp should be part of your marketing campaign, not part of your stress. We are devoted to our customers, and they know we will go the extra mile to help them be successful.
+            Our investment in supporting local business is just one example of our commitment to our work.  We establish relationships with our clients and like them to think of us as an extension of their team.  
             80% of users will not engage with your product again if it does not display properly on mobile; 
             the expectation is that mobile must be a more immersive, personal and thought-through experience; this requires a particular set of
             skills in design-led thinking, strategic consideration and product performance optimisation. We’ve got this. :)
