--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="nav-area">
                 <li><a class="active" href="#Home">Home</a></li>
                 <li><a href="aboutus.html" >About</a></li>
-                <li><a href="contact.html" target="-blank">Contact Us</a></li>
+                <li><a href="contact.html" >Contact Us</a></li>
             </ul>
         </nav>
     </header>
