--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<span class="image"><img src="images/download.jpg" alt="" /></span>
 						<div class="content">
 							<h2>welcome</h2>
-							<p>we thank you for visiting our group portal</p>
+							<h5>we thank you for visiting our group portal</h5>
 							
 						</div>
 					</article>
@@ -86,7 +86,7 @@
 						<span class="image"><img src="images/education_g7zr.jpg" alt="" /></span>
 						<div class="content">
 							<h2>education</h2>
-							<p>we are 4 in the group 3 of us hold a degree in mathematical sciences and 1 hold a degree in...</p>
+							<h5>we are 4 in the group 3 of us hold a degree in mathematical<br> sciences and 1 hold a degree in...</h5>
 							
 						</div>
 					</article>
@@ -95,7 +95,8 @@
 							<span class="image"><img src="images/coding-1556754232.jpg" alt="" /></span>
 							<div class="content">
 								<h2>coding/software langueges</h2>
-								<p>html,css,javascript,mysql,oracle,c++,java,python,php,sql .This are the combined langueges our group knows so far</p>		
+								<h5>html,css,javascript,mysql,oracle,c++,java,python,php,sql </h5>
+									<h5>.This are the combined langueges our group knows so far</h5>		
 							</div>
 					</article>
 				</div>
