--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<span class="image"><img src="images/coding-1556754232.jpg" alt="" /></span>
 							<div class="content">
 								<h2>coding/software langueges</h2>
-								<h5>html,css,javascript,mysql,oracle,c++,java,python,php,sql </h5>
+								<h5>html,css,javascript,mysql,oracle,<br>c++,java,python,php,sql </h5>
 									<h5>.This are the combined langueges our group knows so far</h5>		
 							</div>
 					</article>
